frontend/styles/global.css
/*
 * SPDX-FileCopyrightText: 2021 - 2023 Dusan Mijatovic (dv4all)
 * SPDX-FileCopyrightText: 2021 - 2023 dv4all
 * SPDX-FileCopyrightText: 2022 - 2025 Helmholtz Centre Potsdam - GFZ German Research Centre for Geosciences
 * SPDX-FileCopyrightText: 2022 Marc Hanisch (GFZ) <marc.hanisch@gfz-potsdam.de>
 * SPDX-FileCopyrightText: 2023 - 2025 Dusan Mijatovic (Netherlands eScience Center)
 * SPDX-FileCopyrightText: 2023 - 2025 Netherlands eScience Center
 * SPDX-FileCopyrightText: 2025 Christian Meeßen (GFZ) <christian.meessen@gfz-potsdam.de>
 *
 * SPDX-License-Identifier: Apache-2.0
 */

@import 'tailwindcss';
@config '../tailwind.config.js'; /*NOSONAR*/

/* ---------------------------------
  Tailwind custom classes applied
-----------------------------------*/
/* NOTE!
1. SourceMaps are not working when using @apply
see bug: https://stackoverflow.com/questions/67333479/webpack-shows-incorrect-sourcemaps-when-using-tailwibd-directives
*/

@layer base {
  h1 {
    @apply text-3xl;
  }
  h2 {
    @apply text-2xl;
  }
  h3 {
    @apply text-xl;
  }
  a {
    @apply no-underline transition duration-100 cursor-pointer hover:text-accent;
  }

  body{
    @apply font-normal text-base-content;
  }
  /*
    FIX for default border color after default tailwind colors
    are removed from tailwind.config
  */
  *,
  :after,
  :before {
    border: 0 solid var(--rsd-base-300, #dcdcdc)
  }
  /* button cursor */
  [role="button"],
  button{
    cursor: pointer;
  }
}

/* ---------------------------------------
Tailwind OVERWRITES
NOTE! the classes placed here come after the tailwind's autogenerated classes
-----------------------------------------*/
.prose {
  max-width: inherit;
  overflow: hidden;
}

.prose img{
  display: inline;
  margin: 0;
}

/* ---------------------
 MARKDOWN EDIT / PREVIEW
*/

#markdown-textarea:focus-visible {
  outline: none;
}

#markdown-textarea:disabled {
  cursor: not-allowed;
}

.nav-active{
  @apply border-b border-accent cursor-pointer
}

/* Fix for tailwind typography prose (markdown)
  single backticks in :before/:after are shown instead of grey box around the text.
  1. disabled this in ReactMarkdownWithSettings using classes prose-code:before:hidden prose-code:after:hidden
  2. added code formatting (from github styles)
*/
code{
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  white-space: break-spaces;
  border-radius: 6px;
}

/* -------------------------------------
  custom scrollbar
---------------------------------------*/

html {
  scroll-behavior: smooth;
}

body {
  font-size: 1rem;
  /* minimal with to have logo,
  add button, mobile menu and profile.
  NOTE ! when changing this value we need to update
  useDisableScrollLock hook in utils folder too.
  */
  min-width: 30rem;
  /* fix jumping scrollbar */
  overflow: overlay;
  --scrollbar-thumb: #e4e4e7;
}

#__next {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

/* width */
::-webkit-scrollbar {
  width: 0.5rem;
}

/* track */
::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.1);
}

/* handle */
::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background: rgba(0, 0, 0, 0.25);
}

/* handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(0, 0, 0, 0.5);
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* Fade in Animation */

@keyframes fadeInUp {
  from {
    transform: translate3d(0, 40px, 0)
  }

  to {
    transform: translate3d(0, 0, 0);
    opacity: 1
  }
}

@-webkit-keyframes fadeInUp {
  from {
    transform: translate3d(0, 40px, 0)
  }

  to {
    transform: translate3d(0, 0, 0);
    opacity: 1
  }
}

.animated {
  animation-duration: 1s;
  animation-fill-mode: both;
  -webkit-animation-duration: 1s;
  -webkit-animation-fill-mode: both
}

.animatedFadeInUp {
  opacity: 0
}

.fadeInUp {
  opacity: 0;
  animation-name: fadeInUp;
  -webkit-animation-name: fadeInUp;
}

/* fallback styles when JS is not supported */
@media (scripting: none) {
  .hide-on-no-script{
    display: none;
  }
}

